--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,7 +8,36 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import '~font-awesome/scss/font-awesome';
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.card {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
+.footer-fixed {
+    position: absolute;
+    bottom: 20px;
+}
+
+label.required::after {
+    content:" *";
+    color: $red;
+    font-size: 14px;
+}
+
+.form-group.has-error {
+    input, select, textarea  {
+        border-color: $red;
+    }
+
+    .invalid-feedback {
+        display: block;
+    }
 }
